flapivor/tests/tests-m3/hopix/typechecker/bad/arith.hopix
val x : string = 1 + 1